# Orchestrating_Cash_Flow_INTER_IIT_Pathway

./: .gitattributes  .gitignore  DOCKER_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  platform.sh  validate.sh
backend/: .dockerignore  .env.example  .env.remote-example  DOCKER_FIXES.md  Dockerfile  README.md  check_db_counts.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_main.py  verify_imports.py  verify_path.py
backend/app/: config.py  database.py
backend/app/bonds/api_functions/: Final_Bond_Data.csv  __init__.py  agent_service.py  bond_data_processor.py  bond_price_forecasts.csv  comparison_service.py  models.py  price_statistics_processor.py  rate_yield_processor.py  yield_calculator.py  yield_data_processor.py
backend/app/bonds_agentic_sys/: README.md  __init__.py  bond_maturity_filter.py  main_v2.py  orchestrator_v3.py  run_pipeline.py  run_streamlit.py  schemas_v2.py  start_services.sh  streamlit_app.py  utils.py
backend/app/bonds_agentic_sys/Markdown/: AGENT_TOOL_IMPROVEMENTS.md  ARCHITECTURE_COMPARISON.md  FEATURE_RECOMMENDATIONS.md  INSTALLATION.md  INTEGRATION_STATUS.md  MONGODB_IMPLEMENTATION_SUMMARY.md  MONGODB_SETUP.md  ORCHESTRATOR_V3_README.md  PIPELINE_ARCHITECTURE.md  PORTFOLIO_MANAGER_INTEGRATION.md  PORTFOLIO_UPDATES.md  PRODUCTION_IMPROVEMENTS.md  QUICKSTART.md  QUICKSTART_MONGODB.md  REALTIME_INFO_FLOW.md  STREAMLIT_README.md  UI_IMPROVEMENTS.md
backend/app/bonds_agentic_sys/agent_bond.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/app/bonds_agentic_sys/agents/: __init__.py  advisory.py  analyst.py  explainability.py  ml_model.py  planner.py  portfolio_manager.py  portfolio_update_parser.py  query_classifier.py  realtime_info_agent.py  response_agent.py  scoring.py
backend/app/bonds_agentic_sys/config/: __init__.py  planner_config.json  planner_tools.json
backend/app/bonds_agentic_sys/data/: 1y.csv  5y.csv  7y.csv  bond_snapshot.csv  bonds_data.csv  historical_bonds_data.csv
backend/app/bonds_agentic_sys/legacy/: orchestrator_v1.py  orchestrator_v2.py
backend/app/bonds_agentic_sys/models/: __init__.py  bond_price_forecasting.py  pathway_yield.py
backend/app/bonds_agentic_sys/output_forecasts/: bond_price_report.csv  bond_snapshot.csv  bonds_data.csv  final_forecasts.csv  historical_bonds_data.csv
backend/app/bonds_agentic_sys/pathway_producer_consumer/: README_RUN.md  bond_forecast_core.py  bond_server.py  bond_server_manager.py  historical_quotes_scraper.py  how_to_run.txt  launch_pathway.sh  nse_gsec_script.py  pathway_producer_new.py  run_bond_pipeline.sh  run_bond_pipeline_linux.sh  run_bond_server.sh  test.py
backend/app/bonds_agentic_sys/rag/: __init__.py  rag_system.py
backend/app/bonds_agentic_sys/scripts/: load_portfolios_to_mongodb.py  setup_mongodb.sh  test_mongodb_connection.py
backend/app/bonds_agentic_sys/tests/: README.md  README_E2E.md  README_NP4K_TESTS.md  __init__.py  run_tests.py  test_advisory.py  test_agents_comprehensive.py  test_analyst.py  test_classifier_routing.py  test_conversation_history.py  test_explainability.py  test_guardrails.py  test_integration_comprehensive.py  test_mcp.py  test_mcp_client.py  test_mcp_server.py  test_ml_model.py  test_name_conversation.py  test_news_tool_quick.py  test_np4k_quick.py  test_np4k_realtime_agent.py  test_orchestrator_v3.py  test_pipeline.py  test_pipeline_e2e.py  test_planner.py  test_portfolio.py  test_portfolio_manager.py  test_portfolio_updates.py  test_realtime_info_agent_detailed.py  test_realtime_info_flow.py  test_smart_news_scraper_integration.py  test_web_search_tool.py
backend/app/bonds_agentic_sys/tools/: __init__.py  bond_forecast_core.py  bond_pricer_tool.py  bond_server.py  credit_scraper.py  crisil_tool.py  guardrails.py  news_scraper_tool.py  np4kvesion.py  pathway_producer_new.py  portfolio_tool.py  tool_registry.py  tools_manager.py  web_search_tool.py  yield_forecaster_tool.py
backend/app/bonds_agentic_sys/utils/: __init__.py  agent_logger.py  bond_cache.py  context_manager.py  http_client.py  logger.py  mcp_client.py  model_selector.py  mongodb_client.py  retry_handler.py  state_helpers.py  visualize_graph.py
backend/app/cash_flow/: cash_balance_forecast.py  cash_flow_agent_bash.py  cashflow_graph.py  liquidity_risk_tools.py  market_regime.py  market_report.py  market_tools.py  orchestrator.py  pathway_transform.py
backend/app/cash_flow/berka-datasets/: berka-streaming.csv
backend/app/forex/: MCP_README.md  README.md  api.py  claude_desktop_config.json  config.yaml  data_fetcher.py  db.py  forex_agent.py  mcp_client.py  mcp_config.yaml  models.py  news_tool.py  notebook_preprocessing.py  pipeline.py  position_sizing.py  positions.json  run.py  schemas.py  signals.json  streamlit_app.py  test_all_endpoints.py  test_api.py  test_headlines.py  test_model_comparison.py  test_preprocessing_comparison.py  trade_history.csv  trades.json  utils.py
backend/app/master_orchestrator/: TA_RELIANCE_indicators.json  __init__.py  api.py  api_client.py  component_registry.py  component_selector.py  optimization.py  orchestrator.py  pipeline_registry.py  query_service.py  response.json  router_agent.py  schema.json  schemas.py  session_store.py  test_orchestrator.py  test_router.py
backend/app/models/: chat.py  news.py  version.py  video.py
backend/app/routes/: bond_router.py  cashflow_router.py  chats.py  forex.py  news.py  news_search.py  orchestrator.py  portfolio_trades.py  stocks.py  versions.py  video.py
backend/app/services/: scheduler.py  video.py
backend/data-collection/sebi-circulars/: process_locally.py  vllm_server.py
backend/services/enrichment-pipeline/: dedup.py  features.py  fetcher.py  pipeline_native.py  requirements.txt  sentiment.py  storage.py
backend/services/forex/: Dockerfile  README.md  mcp_server.py  requirements.txt
backend/services/llm-worker/: requirements.txt  worker_native.py
backend/services/news-scraper/: companies.py  requirements.txt  scraper.py  setup_search_config.py
backend/trained_models/: usd_model.pkl
(+154 files in other folders)
