[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.8.0",
    "aiohttp-cors>=0.8.1",
    "aiosignal>=1.4.0",
    "aiosqlite>=0.21.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.0",
    "appdirs>=1.4.4",
    "asttokens>=3.0.1",
    "async-lru>=2.0.5",
    "attrs>=25.4.0",
    "authlib>=1.6.5",
    "banks>=2.2.0",
    "beartype>=0.15.0",
    "beautifulsoup4>=4.12.0",
    "bleach>=6.3.0",
    "blockbuster>=1.5.26",
    "bokeh>=3.8.1",
    "boto3>=1.42.3",
    "botocore>=1.42.3",
    "bs4>=0.0.2",
    "cachetools>=6.2.2",
    "catboost>=1.2.8",
    "certifi>=2025.11.12",
    "cfgv>=3.5.0",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "cloudpickle>=3.1.2",
    "cohere>=5.20.0",
    "comm>=0.2.3",
    "contourpy>=1.3.3",
    "cryptography>=44.0.3",
    "curl-cffi>=0.13.0",
    "cycler>=0.12.1",
    "cyclopts>=4.3.0",
    "dataclasses-json>=0.6.7",
    "datasets>=2.14.4",
    "dateutils>=0.6.12",
    "decorator>=5.2.1",
    "deltalake>=0.17.4",
    "dill>=0.3.7",
    "dirtyjson>=1.0.8",
    "diskcache>=5.6.3",
    "distlib>=0.4.0",
    "dnspython>=2.8.0",
    "docstring-parser>=0.17.0",
    "docutils>=0.22.3",
    "email-validator>=2.3.0",
    "emoji>=2.15.0",
    "executing>=2.2.1",
    "fastapi>=0.123.9",
    "fastmcp>=0.1.0",
    "filelock>=3.20.0",
    "filetype>=1.2.0",
    "fonttools>=4.61.0",
    "forbiddenfruit>=0.1.4",
    "frozendict>=2.4.7",
    "frozenlist>=1.8.0",
    "fs>=2.4.16",
    "fsspec>=2025.12.0",
    "geographiclib>=2.1",
    "geopy>=2.4.1",
    "gitdb>=4.0.12",
    "gitpython>=3.1.45",
    "google-api-core>=2.25.2",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-core>=2.5.0",
    "google-cloud-pubsub>=2.33.0",
    "google-crc32c>=1.7.1",
    "google-generativeai>=0.8.5",
    "google-resumable-media>=2.8.0",
    "googleapis-common-protos>=1.72.0",
    "grandalf>=0.8",
    "graphviz>=0.21",
    "griffe>=1.15.0",
    "grpcio>=1.76.0",
    "grpcio-status>=1.71.2",
    "grpcio-tools>=1.71.2",
    "h11>=0.16.0",
    "h3>=4.3.1",
    "hf-xet>=1.2.0",
    "hmmlearn>=0.3.3",
    "html5lib>=1.1",
    "httpcore>=1.0.9",
    "httplib2>=0.31.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "huggingface-hub>=0.36.0",
    "identify>=2.6.15",
    "idna>=3.11",
    "importlib-metadata>=8.7.0",
    "instructor>=1.13.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "ipython-pygments-lexers>=1.1.1",
    "ipywidgets>=8.1.8",
    "isodate>=0.7.2",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiter>=0.11.1",
    "joblib>=1.5.2",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.25.1",
    "jsonschema-path>=0.3.4",
    "jsonschema-rs>=0.29.1",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-bokeh>=4.0.5",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.9.1",
    "jupyterlab-widgets>=3.0.16",
    "kagglehub>=0.3.13",
    "keyring>=25.7.0",
    "kiwisolver>=1.4.9",
    "langchain>=0.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.0.10",
    "langchain-core>=1.1.1",
    "langchain-litellm>=0.3.2",
    "langchain-openai>=0.0.5",
    "langchain-text-splitters>=1.0.0",
    "langdetect>=1.0.9",
    "langgraph>=0.0.20",
    "langgraph-api>=0.4.28",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-cli>=0.4.7",
    "langgraph-prebuilt>=1.0.5",
    "langgraph-runtime-inmem>=0.14.1",
    "langgraph-sdk>=0.2.12",
    "langsmith>=0.4.55",
    "lazy-object-proxy>=1.12.0",
    "lightgbm>=4.6.0",
    "linkify-it-py>=2.0.3",
    "litellm>=1.80.5",
    "llama-index-core>=0.14.10",
    "llama-index-instrumentation>=0.4.2",
    "llama-index-readers-pathway>=0.4.1",
    "llama-index-retrievers-pathway>=0.4.1",
    "llama-index-workflows>=2.11.5",
    "llvmlite>=0.45.1",
    "lxml>=4.9.0",
    "markdown>=3.10",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.2.1",
    "mcp>=1.16.0",
    "mdit-py-plugins>=0.5.0",
    "mdurl>=0.1.2",
    "more-itertools>=10.8.0",
    "motor>=3.7.1",
    "mpmath>=1.3.0",
    "multidict>=6.7.0",
    "multiprocess>=0.70.15",
    "multitasking>=0.0.12",
    "mypy-extensions>=1.1.0",
    "narwhals>=2.13.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.6",
    "newsdataapi>=0.1.29",
    "nltk>=3.8.0",
    "nodeenv>=1.9.1",
    "nsepython>=2.97",
    "nsepythonserver>=2.97",
    "nsetools>=2.0.1",
    "numba>=0.62.1",
    "numpy>=1.24.0",
    "nvidia-cublas>=13.2.0.9",
    "nvidia-cuda-cupti>=13.1.75",
    "nvidia-cuda-nvrtc>=13.1.80",
    "nvidia-cuda-runtime>=13.1.80",
    "nvidia-cudnn-cu13>=9.17.0.29",
    "nvidia-cufft>=12.1.0.31",
    "nvidia-cufile>=1.16.0.49",
    "nvidia-curand>=10.4.1.34",
    "nvidia-cusolver>=12.0.7.41",
    "nvidia-cusparse>=12.7.2.19",
    "nvidia-cusparselt-cu13>=0.8.1",
    "nvidia-nccl-cu12>=2.27.5",
    "nvidia-nccl-cu13>=2.28.9",
    "nvidia-nvjitlink>=13.1.80",
    "nvidia-nvshmem-cu13>=3.4.5",
    "nvidia-nvtx>=13.1.68",
    "olefile>=0.47",
    "openai>=1.0.0",
    "openapi-core>=0.19.5",
    "openapi-pydantic>=0.5.1",
    "openapi-schema-validator>=0.6.3",
    "openapi-spec-validator>=0.7.2",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-exporter-otlp-proto-common>=1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-proto>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-semantic-conventions>=0.60b0",
    "orjson>=3.11.4",
    "ormsgpack>=1.12.0",
    "packaging>=25.0",
    "pandas>=2.0.0",
    "panel>=1.8.4",
    "param>=2.3.1",
    "parse>=1.20.2",
    "parso>=0.8.5",
    "pathable>=0.4.4",
    "pathway[xpack-llm-docs]>=0.8.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "peewee>=3.18.3",
    "pexpect>=4.9.0",
    "pillow>=10.0.0",
    "platformdirs>=4.5.1",
    "plotly>=5.15.0",
    "pluggy>=1.6.0",
    "pre-commit>=4.5.0",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.4.1",
    "proto-plus>=1.26.1",
    "protobuf>=5.29.5",
    "psutil>=7.1.3",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyarrow>=18.1.0",
    "pyarrow-hotfix>=0.7",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.12.0",
    "pygments>=2.19.2",
    "pyjwt>=2.10.1",
    "pymongo>=4.6.0",
    "pyparsing>=3.2.5",
    "pypdf>=6.4.0",
    "pyperclip>=1.11.0",
    "pysocks>=1.7.1",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-iso639>=2025.11.16",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "python-oxmsg>=0.0.2",
    "python-sat>=1.8.dev24",
    "pytz>=2025.2",
    "pyviz-comms>=3.0.6",
    "pyyaml==6.0.2",
    "ragas>=0.3.2",
    "rapidfuzz>=3.14.3",
    "readchar>=4.2.1",
    "referencing>=0.36.2",
    "regex>=2025.11.3",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "rfc3339-validator>=0.1.4",
    "rich>=14.2.0",
    "rich-rst>=1.3.2",
    "rpds-py>=0.30.0",
    "rsa>=4.9.1",
    "s3transfer>=0.16.0",
    "safetensors>=0.7.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "secretstorage>=3.5.0",
    "semver>=3.0.4",
    "setuptools>=80.9.0",
    "shap>=0.49.1",
    "shapely>=2.1.2",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "soupsieve>=2.8",
    "sqlalchemy>=2.0.44",
    "sse-starlette>=2.1.3",
    "stack-data>=0.6.3",
    "starlette>=0.50.0",
    "structlog>=25.5.0",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.14",
    "tenacity>=9.1.2",
    "threadpoolctl>=3.6.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch>=2.0.0",
    "tornado>=6.5.2",
    "tqdm>=4.65.0",
    "traitlets>=5.14.3",
    "transformers>=4.30.0",
    "triton>=3.5.1",
    "truststore>=0.10.4",
    "typer>=0.12.5,<0.20.0",
    "typer-slim>=0.12.5,<0.20.0",
    "typing-extensions>=4.15.0",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "uc-micro-py>=1.0.3",
    "unstructured>=0.18.21",
    "unstructured-client>=0.42.4",
    "urllib3>=2.6.0",
    "uvicorn[standard]>=0.38.0",
    "virtualenv>=20.35.4",
    "watchfiles>=1.1.1",
    "wbgapi>=1.0.12",
    "wcwidth>=0.2.14",
    "webencodings>=0.5.1",
    "websockets>=15.0.1",
    "werkzeug>=3.1.1",
    "wheel>=0.45.1",
    "widgetsnbextension>=4.0.15",
    "wrapt>=2.0.1",
    "xgboost>=3.1.2",
    "xxhash>=3.6.0",
    "xyzservices>=2025.11.0",
    "yarl>=1.22.0",
    "yfinance>=0.2.66",
    "zipp>=3.23.0",
    "zstandard>=0.25.0",
    # Bonds Agentic System dependencies
    "chromadb>=0.4.0",
    "river>=0.19.0",
    "newspaper3k>=0.2.8",
    "kafka-python>=2.0.2",
    "selenium>=4.20.0",
    "textblob>=0.17.1",
    "spacy>=3.5.0",
    "google-search-results>=2.4.2",
    "lxml-html-clean>=0.1.9",
    "streamlit>=1.28.0",
    "groq>=0.4.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "cffi>=2.0.0",
    "distro>=1.9.0",
    "grpc-google-iam-v1>=0.14.3",
    "jmespath>=1.0.1",
    "pycparser>=2.23",
    "pydantic-core>=2.41.5",
    "pyzmq>=27.1.0",
    "slicer>=0.0.8",
    "uritemplate>=4.2.0",
    "backoff>=2.2.1",
    "deprecated>=1.3.1",
    "exceptiongroup>=1.3.1",
    "fastavro>=1.12.1",
    "fastuuid>=0.14.0",
    "google-ai-generativelanguage>=0.6.15",
    "greenlet>=3.3.0",
    "scikit-network>=0.33.5",
    "tomli>=2.3.0",
    "ty>=0.0.1a31",
    "types-requests>=2.32.4.20250913",
    "absl-py>=2.3.1",
    "accelerate>=1.12.0",
    "aistudio-sdk>=0.3.8",
    "alembic>=1.17.2",
    "altair>=6.0.0",
    "antlr4-python3-runtime>=4.9.3",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "arrow>=1.4.0",
    "babel>=2.17.0",
    "bce-python-sdk>=0.9.55",
    "blinker>=1.9.0",
    "chardet>=5.2.0",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "colorlog>=6.10.1",
    "cssselect>=1.3.0",
    "cssutils>=2.11.1",
    "debugpy>=1.8.17",
    "defusedxml>=0.7.1",
    "docling>=2.64.0",
    "docling-core>=2.54.0",
    "docling-ibm-models>=3.10.3",
    "docling-parse>=4.7.2",
    "effdet>=0.4.1",
    "einops>=0.8.1",
    "et-xmlfile>=2.0.0",
    "faker>=38.2.0",
    "fastjsonschema>=2.21.2",
    "feedfinder2>=0.0.4",
    "feedparser>=6.0.12",
    "flatbuffers>=25.9.23",
    "fqdn>=1.5.1",
    "ftfy>=6.3.1",
    "future>=1.0.0",
    "google-cloud-appengine-logging>=1.7.0",
    "google-cloud-audit-log>=0.4.0",
    "google-cloud-logging>=3.12.1",
    "google-cloud-run>=0.12.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-vision>=3.11.0",
    "humanfriendly>=10.0",
    "imagesize>=1.4.1",
    "isoduration>=20.11.0",
    "jieba3k>=0.35.1",
    "json5>=0.12.1",
    "jsonlines>=4.0.0",
    "jsonref>=1.1.0",
    "jupyter>=1.1.1",
    "jupyter-console>=6.6.3",
    "jupyter-events>=0.12.0",
    "jupyter-lsp>=2.3.0",
    "jupyter-server>=2.17.0",
    "jupyter-server-terminals>=0.5.3",
    "jupyterlab>=4.5.0",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-server>=2.28.0",
    "langchainhub>=0.1.18",
    "lark>=1.3.1",
    "latex2mathml>=3.78.1",
    "mako>=1.3.10",
    "marko>=2.2.1",
    "mistune>=3.1.4",
    "ml-dtypes>=0.5.4",
    "modelscope>=1.32.0",
    "mpire>=2.10.2",
    "msal>=1.34.0",
    "msoffcrypto-tool>=5.4.2",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "notebook>=7.5.0",
    "notebook-shim>=0.2.4",
    "nvidia-cublas-cu12>=12.8.4.1",
    "nvidia-cuda-cupti-cu12>=12.8.90",
    "nvidia-cuda-nvrtc-cu12>=12.8.93",
    "nvidia-cuda-runtime-cu12>=12.8.90",
    "nvidia-cudnn-cu12>=9.10.2.21",
    "nvidia-cufft-cu12>=11.3.3.83",
    "nvidia-cufile-cu12>=1.13.1.3",
    "nvidia-curand-cu12>=10.3.9.90",
    "nvidia-cusolver-cu12>=11.7.3.90",
    "nvidia-cusparse-cu12>=12.5.8.93",
    "nvidia-cusparselt-cu12>=0.7.1",
    "nvidia-nvjitlink-cu12>=12.8.93",
    "nvidia-nvshmem-cu12>=3.3.20",
    "nvidia-nvtx-cu12>=12.8.90",
    "office365-rest-python-client>=2.6.2",
    "omegaconf>=2.3.0",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "opt-einsum>=3.3.0",
    "optuna>=4.6.0",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "paddlex>=3.3.10",
    "pandocfilters>=1.5.1",
    "pdfminer-six>=20250506",
    "pi-heif>=1.1.1",
    "pikepdf>=10.0.2",
    "polyfactory>=3.1.0",
    "portalocker>=3.2.0",
    "premailer>=3.10.0",
    "prettytable>=3.17.0",
    "prometheus-client>=0.23.1",
    "py-cpuinfo>=9.0.0",
    "pyclipper>=1.4.0",
    "pycocotools>=2.0.10",
    "pycryptodome>=3.23.0",
    "pydeck>=0.9.1",
    "pylatexenc>=2.10",
    "pypandoc>=1.16.2",
    "pypdfium2>=4.30.0",
    "python-bidi>=0.6.7",
    "python-docx>=1.2.0",
    "python-json-logger>=4.0.0",
    "python-pptx>=1.0.2",
    "rapidocr>=3.4.2",
    "requests-file>=3.0.1",
    "rfc3986-validator>=0.1.1",
    "rfc3987-syntax>=1.1.0",
    "rouge-score>=0.1.2",
    "rtree>=1.4.1",
    "ruamel-yaml>=0.18.16",
    "ruamel-yaml-clib>=0.2.15",
    "sacrebleu>=2.5.1",
    "semchunk>=2.2.2",
    "send2trash>=1.8.3",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "sgmllib3k>=1.0.0",
    "sqlglot>=28.1.0",
    "terminado>=0.18.1",
    "timm>=1.0.22",
    "tinycss2>=1.4.0",
    "tinysegmenter>=0.3",
    "tldextract>=5.3.0",
    "toml>=0.10.2",
    "torchvision>=0.24.1",
    "types-python-dateutil>=2.9.0.20251115",
    "ujson>=5.11.0",
    "unstructured-inference>=1.1.1",
    "unstructured-pytesseract>=0.3.15",
    "uri-template>=1.3.0",
    "uuid-utils>=0.12.0",
    "watchdog>=6.0.0",
    "webcolors>=25.10.0",
    "websocket-client>=1.9.0",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]

[tool.uv.workspace]
members = [
    "services/bonds/forecasting",
]
